evaluator: fix "remaining operands' issue (#681048)

https://bugzilla.gnome.org/show_bug.cgi?id=681048